# CLI-Chatbot

./: README.md  main.py  pyproject.toml
cli-chatbot/: __init__.py  chunk_spliting.py  extract_data.py  local_embedding.py  main.py  model_list.py
